--- a/game.css
+++ b/game.css
@@ -22,6 +22,18 @@ body {
     grid-template-columns: auto auto auto;
 }
 
+#labels-container {
+    padding: 1px 0;
+}
+
+.rounded {
+    border-radius: 22px;
+}
+
+.dimmed {
+    background-color: rgba(0,0,0,0.5);
+}
+
 .grid-item {
     border: 1px solid rgba(0, 0, 0, 0.8);
     padding: 2px 5px;
@@ -34,6 +46,7 @@ body {
 
 #game-mode-btn-container {
     width: 100%;
+    margin-top: 2rem;
 }
 
 #player-p {
