--- a/main.css
+++ b/main.css
@@ -5,6 +5,38 @@ p {
   line-height: 1.5;
   font-family: Montserrat, sans-serif; }
 
+body {
+  font: 100% Montserrat, sans-serif;
+  color: #333;
+  padding: 0;
+  margin: 0; }
+
+nav {
+  padding: 1.2rem 2rem; }
+  nav a {
+    float: left;
+    display: block;
+    padding: 0.6rem 2rem;
+    text-decoration: none;
+    transition: cubic-bezier(0.47, 0, 0.745, 0.715) 0.3s; }
+    nav a.navbar-link {
+      text-transform: uppercase;
+      font-size: 1rem;
+      letter-spacing: 1px; }
+      nav a.navbar-link.active {
+        border-bottom: 2px solid white; }
+        nav a.navbar-link.active:hover {
+          background-color: transparent; }
+      nav a.navbar-link:hover {
+        background-color: rgba(255, 255, 255, 0.1); }
+  nav a.icon {
+    display: none;
+    padding: 10px 12px;
+    border: 1px solid #fff;
+    border-radius: 8px; }
+    nav a.icon:focus {
+      outline: transparent; }
+
 .navbar-dark {
   background-color: #333;
   color: #fff; }
@@ -51,6 +83,16 @@ p {
     color: #333;
     box-shadow: 2px 4px 2px 2px rgba(0, 0, 0, 0.418); }
 
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  border: 0; }
+
 .card {
   position: relative;
   display: -webkit-box;
@@ -84,35 +126,32 @@ p {
       font-family: Montserrat, sans-serif;
       text-align: justify; }
 
-body {
-  font: 100% Montserrat, sans-serif;
-  color: #333;
-  padding: 0;
-  margin: 0; }
+.input-group {
+  margin-bottom: 1rem; }
 
-nav {
-  padding: 1.2rem 2rem; }
-  nav a {
-    float: left;
-    display: block;
-    padding: 0.6rem 2rem;
-    text-decoration: none;
-    transition: cubic-bezier(0.47, 0, 0.745, 0.715) 0.3s; }
-    nav a.navbar-link {
-      text-transform: uppercase;
-      font-size: 1rem;
-      letter-spacing: 1px; }
-      nav a.navbar-link.active {
-        border-bottom: 2px solid white; }
-        nav a.navbar-link.active:hover {
-          background-color: transparent; }
-      nav a.navbar-link:hover {
-        background-color: rgba(255, 255, 255, 0.1); }
-  nav a.icon {
-    display: none;
-    padding: 10px 12px;
-    border: 1px solid #fff;
-    border-radius: 8px; }
+.form-control {
+  display: block;
+  box-sizing: border-box;
+  width: 100%;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  line-height: 1.5;
+  background-color: rgba(60, 76, 109, 0.9);
+  color: #fff;
+  border: none;
+  font-family: Montserrat, sans-serif; }
+  .form-control:focus {
+    box-shadow: 0 0 5px #0091ff;
+    border-color: transparent;
+    outline: transparent; }
+
+.resize-none {
+  resize: none; }
+
+footer {
+  padding: 0.5rem 0; }
+  footer small {
+    color: #fff; }
 
 #hero {
   height: 100vh;
@@ -193,22 +232,25 @@ nav {
   max-width: 1200px;
   margin-left: auto;
   margin-right: auto; }
-  #intro-content-container #intro-img {
-    float: left;
-    width: 500px;
-    max-width: 500px;
-    margin-right: 15px; }
+
+#intro-img {
+  float: left;
+  width: 500px;
+  max-width: 500px;
+  margin-right: 15px; }
 
 #intro-text {
   padding: 0 1rem; }
-  #intro-text #intro-title {
-    font-size: 4rem;
-    font-family: "Advent Pro", sans-serif;
-    text-align: left;
-    margin: 0; }
   #intro-text p {
     text-align: justify;
-    font-size: 1rem; }
+    font-size: 1rem;
+    margin: auto 1rem; }
+
+#intro-title {
+  font-size: 4rem;
+  font-family: "Advent Pro", sans-serif;
+  text-align: left;
+  margin: 0; }
 
 #intro-subtitle {
   font-family: "Advent Pro", sans-serif;
@@ -286,5 +328,70 @@ nav {
       font-size: 2.4rem; }
     #intro-content-container #intro-subtitle {
       font-size: 2.4rem; } }
+/*CONTACT*/
+#contact {
+  width: 100%;
+  background: white url("images/contact_background.jpg") center/cover no-repeat; }
+
+#contact-content-container {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  max-width: 1400px;
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap; }
+
+#contact-text {
+  flex: 1;
+  margin: 0 16px;
+  max-width: 468px; }
+  #contact-text h3 {
+    text-align: left;
+    font-size: 2rem;
+    margin-top: 0;
+    font-family: "Advent Pro", sans-serif; }
+  #contact-text p {
+    text-align: justify; }
+
+#contact-form {
+  flex: 1;
+  max-width: 700px;
+  min-width: 486px;
+  padding-right: 16px; }
+  #contact-form form {
+    width: 100%; }
+
+#contact-btn {
+  padding: .5rem 2rem;
+  background-color: transparent;
+  color: #fff;
+  font-family: Montserrat, sans-serif;
+  font-weight: 300;
+  border: 2px solid #fff;
+  border-radius: 0;
+  font-size: 1.2rem;
+  transition: cubic-bezier(0.47, 0, 0.745, 0.715) 0.3s;
+  float: right; }
+  #contact-btn:hover {
+    cursor: pointer;
+    background-color: #fff;
+    color: #333;
+    font-weight: 600;
+    box-shadow: 2px 4px 2px 2px rgba(0, 0, 0, 0.418); }
+
+@media screen and (max-width: 872px) {
+  #contact-content-container {
+    display: block;
+    padding-bottom: 2rem; }
+
+  #contact-text, #contact-form {
+    margin: 2rem auto;
+    padding: 0 2rem;
+    max-width: 430px; }
+
+  #contact-form {
+    min-width: 0px; } }
 
 /*# sourceMappingURL=main.css.map */
