--- a/main.scss
+++ b/main.scss
@@ -1,44 +1,4 @@
 @import "base";
-body {
-    font: 100% $body-font;
-    color: $primary-light-color;
-    padding: 0;
-    margin: 0;
-}
-
-nav {
-    padding: 1.2rem 2rem;
-    a {
-        float: left;
-        display: block;
-        padding: 0.6rem 2rem;
-        text-decoration: none;
-        transition: cubic-bezier(0.47, 0, 0.745, 0.715) 0.3s;
-        &.navbar-link {
-            text-transform: uppercase;
-            font-size: 1rem;
-            letter-spacing: 1px;
-
-            &.active {
-                border-bottom: 2px solid white;
-                &:hover {
-                    background-color: transparent;
-                }
-            }
-
-            &:hover {
-                background-color: rgba(255, 255, 255, 0.1);
-            }
-        }
-    }
-
-    a.icon {
-        display: none;
-        padding: 10px 12px;
-        border: 1px solid #fff;
-        border-radius: 8px;
-    }
-}
 
 #hero {
     height: 100vh;
@@ -145,25 +105,29 @@ $intro-padding-top: 30px;
     max-width: 1200px;
     margin-left: auto;
     margin-right: auto;
-    #intro-img {
-        float: left;
-        width: 500px;
-        max-width: 500px;
-        margin-right: 15px;
-    }
 }
+
+#intro-img {
+    float: left;
+    width: 500px;
+    max-width: 500px;
+    margin-right: 15px;
+}
+
 #intro-text {
     padding: 0 1rem;
-    #intro-title {
-        font-size: $lg-title-font-size;
-        font-family: $headers-font;
-        text-align: left;
-        margin: 0;
-    }
     p {
         text-align: justify;
         font-size: $lg-body-font-size;
+        margin: auto 1rem;
     }
+}
+
+#intro-title {
+    font-size: $lg-title-font-size;
+    font-family: $headers-font;
+    text-align: left;
+    margin: 0;
 }
 
 #intro-subtitle {
@@ -266,5 +230,82 @@ $intro-padding-top: 30px;
         #intro-subtitle {
             font-size: $xs-title-font-size;
         }
+    }
+}
+
+/*CONTACT*/
+#contact {
+    width: 100%;
+    background: white url("images/contact_background.jpg") center/cover no-repeat;
+}
+
+#contact-content-container {
+    padding-top: $intro-padding-top;
+    padding-bottom: $intro-padding-top;
+    max-width: 1400px;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+#contact-text {
+    flex: 1;
+    margin: 0 16px;
+    max-width: 468px;
+    h3 {
+        text-align: left;
+        font-size: 2rem;
+        margin-top: 0;
+        font-family: $headers-font;
+    }
+    p {
+        text-align: justify;
+    }
+}
+
+#contact-form {
+    flex: 1;
+    max-width: 700px;
+    min-width: 486px;
+    padding-right: 16px;
+    form {
+        width: 100%;
+    }
+}
+
+#contact-btn {
+    padding: .5rem 2rem;
+    background-color: transparent;
+    color: #fff;
+    font-family: $body-font;
+    font-weight: 300;
+    border: 2px solid #fff;
+    border-radius: 0;
+    font-size: 1.2rem;
+    transition: cubic-bezier(0.47, 0, 0.745, 0.715) 0.3s;
+    float: right;
+    &:hover {
+        cursor: pointer;
+        background-color: #fff;
+        color: $primary-light-color;
+        font-weight: 600;
+        box-shadow: 2px 4px 2px 2px rgba(0, 0, 0, 0.418);
+    }
+}
+
+@media screen and (max-width: 872px) {
+    #contact-content-container {
+        display: block;
+        padding-bottom: 2rem;
+    }
+    #contact-text, #contact-form {
+        margin: 2rem auto;
+        padding: 0 2rem;
+        max-width: 430px;
+    }
+    #contact-form {
+        min-width: 0px;
     }
 }
