--- a/main.css
+++ b/main.css
@@ -145,6 +145,20 @@ nav {
     border-color: transparent;
     outline: transparent; }
 
+::placeholder {
+  /* Chrome, Firefox, Opera, Safari 10.1+ */
+  color: #c9c9c9;
+  opacity: 1;
+  /* Firefox */ }
+
+:-ms-input-placeholder {
+  /* Internet Explorer 10-11 */
+  color: #c9c9c9; }
+
+::-ms-input-placeholder {
+  /* Microsoft Edge */
+  color: #c9c9c9; }
+
 .resize-none {
   resize: none; }
 
