--- a/_base.scss
+++ b/_base.scss
@@ -154,6 +154,7 @@ nav {
     .card-img-top {
         display: block;
         width: 100%;
+        max-height: 235px;
         border-top-left-radius: calc(0.25rem - 1px);
         border-top-right-radius: calc(0.25rem - 1px);
     }
