--- a/main.css
+++ b/main.css
@@ -108,6 +108,7 @@ nav {
   .card .card-img-top {
     display: block;
     width: 100%;
+    max-height: 235px;
     border-top-left-radius: calc(0.25rem - 1px);
     border-top-right-radius: calc(0.25rem - 1px); }
   .card .card-body {
