--- a/_base.scss
+++ b/_base.scss
@@ -151,7 +151,7 @@ nav {
     border: 1px solid $primary-light-color;
     border-radius: 0.25rem;
 
-    .card-img-top {
+    img.card-img-top {
         display: block;
         width: 100%;
         max-height: 235px;
